tests/NormalTests/paczka1/small_fuzzy/91158196.err
Error in line 5: RtD A32 -1,9
Error in line 4: 7VXi82dFLJ S944 33,5
Error in line 8: 7VXi82dFLJ A32 76,1
Error in line 3: J0y1psLPV S177 61,4
Error in line 2: RtD A32 2,3
Error in line 12: J0y1psLPV A32 14,3
